added funcs
